[package]
name = "flash-skeleton"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
ethers = { version = "2.0.14", features = ["rustls"] }
tokio = { version = "1.51.0", features = ["full"] }
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
eyre = "0.6.12"
colored = "2.1"
